--- a/exercicios/Imagens-Fundo/fundo002.html
+++ b/exercicios/Imagens-Fundo/fundo002.html
@@ -7,26 +7,29 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url(Imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url(Imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
+        
         }
 
         main {
             background-color: white;
-            width: 400px;
+        
             padding: 10px;
             margin: auto;
             border: 1px solid blue;
             border-radius: 15px;
+            max-width: 400px;
         }
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sint ratione enim optio est a tenetur ea illo, iure aspernatur quis. Voluptates iusto quidem nihil in laborum voluptas iste autem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ipsum? Sed praesentium earum sequi delectus magni minima repellat quibusdam ut alias deserunt. Aliquid, ducimus. Animi maxime neque repellat quasi deserunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora molestiae repudiandae aspernatur illum explicabo quaerat obcaecati ad, excepturi itaque enim autem ipsam odit optio doloribus, eveniet consequuntur? Quas, voluptates repudiandae.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sint ratione enim optio est a tenetur ea illo, iure aspernatur quis. Voluptates iusto quidem nihil in laborum voluptas iste autem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ipsum? Sed praesentium earum sequi delectus magni minima repellat quibusdam ut alias deserunt. Aliquid, ducimus. Animi maxime neque repellat quasi deserunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora molestiae repudiandae aspernatur illum explicabo quaerat obcaecati ad, excepturi itaque enim autem ipsam odit optio doloribus, eveniet consequuntur? Quas, voluptates repudiandae.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sint ratione enim optio est a tenetur ea illo, iure aspernatur quis. Voluptates iusto quidem nihil in laborum voluptas iste autem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ipsum? Sed praesentium earum sequi delectus magni minima repellat quibusdam ut alias deserunt. Aliquid, ducimus. Animi maxime neque repellat quasi deserunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora molestiae repudiandae aspernatur illum explicabo quaerat obcaecati ad, excepturi itaque enim autem ipsam odit optio doloribus, eveniet consequuntur? Quas, voluptates repudiandae.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sint ratione enim optio est a tenetur ea illo, iure aspernatur quis. Voluptates iusto quidem nihil in laborum voluptas iste autem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ipsum? Sed praesentium earum sequi delectus magni minima repellat quibusdam ut alias deserunt. Aliquid, ducimus. Animi maxime neque repellat quasi deserunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora molestiae repudiandae aspernatur illum explicabo quaerat obcaecati ad, excepturi itaque enim autem ipsam odit optio doloribus, eveniet consequuntur? Quas, voluptates repudiandae.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis sint ratione enim optio est a tenetur ea illo, iure aspernatur quis. Voluptates iusto quidem nihil in laborum voluptas iste autem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ipsum? Sed praesentium earum sequi delectus magni minima repellat quibusdam ut alias deserunt. Aliquid, ducimus. Animi maxime neque repellat quasi deserunt! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora molestiae repudiandae aspernatur illum explicabo quaerat obcaecati ad, excepturi itaque enim autem ipsam odit optio doloribus, eveniet consequuntur? Quas, voluptates repudiandae.</p>
 
     </main>
